<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_MR1L4" Id="{3ada9ee3-5ea3-4885-a7da-685ee50ab8d2}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    // Pitch Mechanism:
    {attribute 'TcLinkTo' := '.diEncCnt:=TIIB[EL5042_M1L4_PitchBender]^FB Inputs Channel 1^Position'}
    MR1L4_Pitch : HOMS_PitchMechanism := (ReqPosLimHi := 246,
                                         ReqPosLimLo := -212.0,
                                         diEncPosLimHi := 9951420,
                                         diEncPosLimLo := 9716400);
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>