<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_MR2L3" Id="{39aa3d3e-e981-4a44-9c10-e2ef2b749839}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    // Pitch Mechanism:
    {attribute 'TcLinkTo' := '.diEncCnt:=TIIB[EL5042_M1_PitchBender]^FB Inputs Channel 1^Position'}
    MR2L3_Pitch : HOMS_PitchMechanism := (ReqPosLimHi := 246,
                                         ReqPosLimLo := -212.0,
                                         diEncPosLimHi := 10349000,
                                         diEncPosLimLo := 9349000);
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>